--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,7 +40,7 @@
 .small-card{
     flex: 0 0 55%;
     margin-right: 2rem;
-    height: 70vh !important;
+    max-height: 70vh !important;
 }
 
 .side-board{
@@ -55,13 +55,11 @@
   scrollbar-width: none;
 }
 
-.overflow-hidden {
-    overflow-y: hidden;
-}
-
 .table-scroll-container {
-    overflow-y : auto;
-    height:100vh;
+    overflow-y: auto;
+    height: 1px;
+    max-height: 100%;
+    flex: auto;
 }
 
 /* .table-scroll-small-height {
@@ -75,6 +73,12 @@
 .container-padding {
     padding-top: 1.25rem;
     padding-bottom: 1.25rem;
+    height: 100%;
+}
+
+.direct-content-box {
+    display: flex;
+    flex-direction: column;
 }
 
 
@@ -98,6 +102,11 @@
     max-width: 100% !important;
     max-height: 100% !important;
     min-width: 90% !important;
+    height: 100%;
+}
+
+.table-height{
+    height:100%;
 }
 
 .h-90{
@@ -707,6 +716,7 @@ html { height: 100%;}
 /* actualiser un membre */
 
 .block{
+    height:100%;
     min-height: 63vh;
     max-height: 80vh;
 }
